--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-#Simulating The Effects of Non-Representative Sampling and Sample_Size
+#Simulating The Effects of Non-Representative Sampling and Sample Size
 
 Constructing Python simulations can bring to life concepts and frameworks of how we understand the world in a creative, tangible way.  
 
